--- a/yum/style.css
+++ b/yum/style.css
@@ -54,7 +54,7 @@ table {
 /* END RESET */
 
 
-body { font-family:Archer; font-size:14px; padding-left:50px; padding-top;50px;}
+body { font-family:Archer; font-size:14px; padding-left:50px; padding-top;50px; padding-right:500px;}
 section#content { margin:0 auto; width:960px; padding:50px 50px; }
 span { font-style: italic; }
 h1 { font-family:Bebas; text-transform:uppercase; font-size:50px; font-weight:bold;}
