--- a/yum/style.css
+++ b/yum/style.css
@@ -63,3 +63,4 @@ h4 { font-size:20px;}
 h5 { font-family:Francois One; font-size:20px; font-weight:bold;}
 h6 { padding-left:20px; padding-bottom:10px;}
 p {padding-top:10px;}
+ul {padding-left:20px; padding-bottom:10px;}
