--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -51,11 +51,13 @@ table {
 }
 
 /* END RESET */
-body { font-family:Averia Serif Libre; padding-left:20px; }
+body { font-family:Averia Serif Libre; padding-left:20px; padding-right:60px;}
 h1 { font-family:Montserrat; font-weight: 700; font-size:40px; padding-left:70px;}
 h2 { font-family:Montserrat; font-size:20px; padding-left:70px; }
-p { font-family:Averia Serif Libre; padding-left:70px; }
-
+p { font-family:Averia Serif Libre; padding-left:70px; padding-right:60px; }
+nav li { display:inline-block; padding-left:70px;}
+footer { padding-left:70px; padding-top:30px; }
+img { padding-left:70px; padding-top:20px; padding-bottom:50px; }
 
 
 /* Center Content */
