--- a/yum/style.css
+++ b/yum/style.css
@@ -62,5 +62,7 @@ h2 { font-size:25px; font-weight:bold; color:black;  padding-top:30px;}
 h4 { font-size:20px;}
 h5 { font-family:Francois One; font-size:20px; font-weight:bold;}
 h6 { padding-left:20px; padding-bottom:10px;}
-p {padding-top:10px;}
-ul {padding-left:20px; padding-bottom:10px;}
+p { padding-top:10px;}
+ul { padding-left:20px; padding-bottom:10px; }
+li { padding-bottom:10px; }
+ol { padding-left:20px; padding-bottom:10px; }
