--- a/meeee/style.css
+++ b/meeee/style.css
@@ -51,6 +51,9 @@ table {
 body { font-family:Times; font-size:14px; }
 section#content { margin:0 auto; width:960px; padding:20px 0px; }
 
-h1 { font-size:48px; font-weight:bold; color:black; text-align:center; }
-h2 { font-size:36px; font-weight:bold; color:black; text-align:center; }
-p { padding-bottom:10px; }
+h1 { font-family: Homemade Apple; font-size:48px; font-weight:bold; color:black; text-align:center; }
+h2 { font-family: Homemade Apple; font-size:36px; font-weight:bold; color:black; text-align:center; line-height:60px; }
+p { padding-bottom:10px; padding-top:30px; text-align:center; color:#6b6b7d; }
+img { max-width:45%; align: center;}
+img.center {display: block; margin-left: auto; margin-right: auto;}
+
