--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -51,13 +51,21 @@ table {
 }
 
 /* END RESET */
-body { font-family:Averia Serif Libre; padding-left:20px; padding-right:60px;}
+
+
+
+
+
+
+body { font-family:Averia Serif Libre; padding-left:20px; padding-right:100px; background:#EFEFF4; }
 h1 { font-family:Montserrat; font-weight: 700; font-size:40px; padding-left:70px;}
 h2 { font-family:Montserrat; font-size:20px; padding-left:70px; }
-p { font-family:Averia Serif Libre; padding-left:70px; padding-right:60px; }
-nav li { display:inline-block; padding-left:70px;}
-footer { padding-left:70px; padding-top:30px; }
+p { font-family:Averia Serif Libre; padding-left:70px; color:#585858; }
+nav li { display:inline-block; padding-left:70px; padding-top:30px; color:#454546; }
+footer { padding-left:70px; padding-top:30px; font-size:14px; color:#353535; }
 img { padding-left:70px; padding-top:20px; padding-bottom:50px; }
+article {-webkit-column-count:2; -moz-column-count:2; column-count:3;
+	-webkit-column-gap:70px; /*chrome safari opera*/ -moz-column-gap:40px; /*firefox*/ column-gap:40px;}
 
 
 /* Center Content */
