what the fuck is happening to cats and dogs. llamas worked but not the cats. fuck pets.

--- a/llama-love/style.css
+++ b/llama-love/style.css
@@ -53,3 +53,11 @@ table {
 /* -----------------END RESET---------------- */
 
 
+
+
+
+h1 {font-family:helvetica; font-size:2em; font-weight:bold; }
+h2 {font-family:helvetica; font-size:1.5em; font-weight:bold; }
+p {/*idk what the fuck to do*/}
+body { margin:50px;}
+article {width: 40%; padding-right:30px; float:left;}  /*WHY THE FUCK DID IT WORK HEREEEE BUT NOT THEREEEE!?!?!*/
