--- a/cats-vs-dogs-original/reset.css
+++ b/cats-vs-dogs-original/reset.css
@@ -55,28 +55,39 @@ table {
 
 
 
-/*
-section .nav {margin:0 auto; display:inline-block;}*/
-img .logo {margin:0 auto; width: 400px;}
-body {padding-left: 10%; padding-top:5%;  padding-right:10%;}
-nav {margin:0 auto; border-style:solid hidden solid hidden; margin:5px; padding-bottom:15px; }
-li {float:left; margin:0 auto; padding-left:10px; padding-right:10px; text-transform:uppercase; }
-#both {margin:30px;}
-#left {display:inline; float:left; width:40%; }
-#right {display:inline; float:right; width:40%; border-style:hidden hidden solid hidden;}
-footer { margin:10px; position:relative; bottom:5%; left:5%;}
 
-/*wtf am i doing wronggggggg like wtf is happening with this footer man like whaaaattttt yo. damn man. i'm done with this shit. i'll figure it out later. but wait WHY IN THE NAME OF SWEET JIGGLY BABY CARROTS ISN'T THE BORDER SHOWING THE FUCK UPPPPPPP ALKSJFASFJASKDJFAS  */
 
+body { font-family:Averia Serif Libre; padding-left:20px; padding-right:100px; background:#EFEFF4; }
+h1 { font-family:Montserrat; font-weight: 700; font-size:40px; padding-left:70px;}
+h2 { font-family:Montserrat; font-size:20px; padding-left:70px; }
+p { font-family:Averia Serif Libre; padding-left:70px; color:#585858; }
+nav li { display:inline-block; padding-left:70px; padding-top:30px; color:#454546; }
+footer { padding-left:70px; padding-top:30px; font-size:14px; color:#353535; }
+img { padding-left:70px; padding-top:20px; padding-bottom:50px; }
+article {-webkit-column-count:2; -moz-column-count:2; column-count:3;
+	-webkit-column-gap:70px; /*chrome safari opera*/ -moz-column-gap:40px; /*firefox*/ column-gap:40px;}
+
+
+/* Center Content */
+
+.centered { 
+  margin:0 auto;
+  width:960px;
+}
+
+
+/* Clearfix */
 .clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
-	}
-
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
 .clearfix { display: inline-block; }
-  html[xmlns] .clearfix { display: block; }
-  * html .clearfix { height: 1%; }
+html[xmlns] .clearfix { display: block; }
+* html .clearfix { height: 1%; }
+
+
