--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -69,7 +69,7 @@ li {display:inline-block; padding-left:10px; padding-right:10px; text-transform:
 
 #both {padding-left:2%; padding-right:2%; padding-bottom:4%; padding-top:1%; border-bottom:solid 3px; height:400px;/*i think i cheeted here. how do you spell cheated*/}
 
-#left {float:left; width:43%; padding:5px; padding-right:5%;}
+#left {float:left; width:43%; padding:5px; padding-right:50px;}
 
 #right {float:left; width:43%; padding:5px;}
 
