--- a/meeee/style.css
+++ b/meeee/style.css
@@ -66,6 +66,19 @@ img.center {display: block; margin-left: auto; margin-right: auto;}
 
 
 
+@media screen and (max-width:9000px)
+ {
+	img{ max-width:500px; }
+ }
+
+
+@media screen and (max-width:1200px)
+ {
+   h1 {font-size:2.25em; }
+   h2 {font-size:1.5em; }
+   img{ max-width:55%; }
+  }
+
 
 
 @media screen and (max-width:800px) 
@@ -81,3 +94,6 @@ img.center {display: block; margin-left: auto; margin-right: auto;}
   h1 {font-size:2em; }
   h2 {font-size:1.25em; }
   img {max-width:75%;}
+ } 
+ 
+
