--- a/meeee/style.css
+++ b/meeee/style.css
@@ -97,3 +97,15 @@ img.center {display: block; margin-left: auto; margin-right: auto;}
  } 
  
 
+
+
+
+
+
+
+@media mobile and (max-width:550px)
+ {
+  h1 {font-size:2em; }
+  h2 {font-size:1.25em; }
+  img {max-width:75%;}
+ } 
