--- a/meeee/style.css
+++ b/meeee/style.css
@@ -103,7 +103,7 @@ img.center {display: block; margin-left: auto; margin-right: auto;}
 
 
 
-@media mobile and (max-width:550px)
+@media handheld and (max-width:550px)
  {
   h1 {font-size:2em; }
   h2 {font-size:1.25em; }
