SERIOUSLY THOUGH THAT PLANT MOVED

--- a/wireframethings/style.css
+++ b/wireframethings/style.css
@@ -67,3 +67,9 @@ p { font-family:Lora; color:white; line-height:1.4em;}
 h1 { font-family:Hammersmith One; font-size:3em; color:grey; }
 h3 { font-family:Hammersmith One; font-size:1.4em; padding-top:15px; color:darkgrey; }
 img { max-width:90%; }
+
+
+
+/* 
+HOLY SHIT THE PLANT JUST MOVED. DUDE NO IM SO FUCKING SERIOUS RIGHT NOW. IT MOVED. I SWEAR.. YES IT DID. NOT CAZY. BUT THAT SHIT WAS CRAZY. OMG. WHY.
+*/
