--- a/21-secrts/style.css
+++ b/21-secrts/style.css
@@ -63,9 +63,5 @@ table {
 
 
 
-/*body {background-color:black; color:white;}*/
+body {background-color:black; color:white;}
 p {font-family:helvetica; padding-top:20px; line-height:1.4em;}
-h1 {text-align:center; font-size:2em;}
-article {width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; }
-h2 {font-size:4em;}
-img {max-height:300px; align:center; display:block; margin-left:auto; margin-right:auto; padding-top:40px; padding-bottom:10px; }
