--- a/21/style.css
+++ b/21/style.css
@@ -68,4 +68,19 @@ p {font-family:helvetica; padding-top:20px; line-height:1.4em;}
 h1 {text-align:center; font-size:2em;}
 article {width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; }
 h2 {font-size:4em;}
-img {max-height:300px; align:center; display:block; margin-left:auto; margin-right:auto; padding-top:40px; padding-bottom:10px; }
+img {max-width:50%; align:center; display:block; margin-left:auto; margin-right:auto; padding-top:40px; padding-bottom:10px; }
+
+
+
+
+@media handheld and (max-width:700px)
+	{
+	 img {max-width:70%;}
+	 
+	 
+
+
+	 
+@media screen and (max-width:700px)
+	{
+	 img {max-width:70%;}
