--- a/meeee/style.css
+++ b/meeee/style.css
@@ -93,7 +93,7 @@ img.center {display: block; margin-left: auto; margin-right: auto;}
  {
   h1 {font-size:2em; }
   h2 {font-size:1.25em; }
-  img {max-width:75%;}
+  img {max-height:75%;}
  } 
  
 
@@ -107,5 +107,5 @@ img.center {display: block; margin-left: auto; margin-right: auto;}
  {
   h1 {font-size:2em; }
   h2 {font-size:1.25em; }
-  img {max-width:75%;}
+  img {max-height:75%;}
  } 
