--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -55,6 +55,25 @@ table {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*
 section .nav {margin:0 auto; display:inline-block;}*/
 
@@ -70,12 +89,12 @@ li {display:inline-block; padding-left:10px; padding-right:10px; text-transform:
 
 
 
-img.dogg {max-height:242px; }
+img.dogg {max-height:242px; padding-left:0%; }
 
-img.catt {max-height:242px; }
+img.catt {max-height:242px; padding-left:0%; }
 
 
-#both {padding-left:2%; padding-right:2%; padding-bottom:4%; padding-top:1%; font-size:14px;  /*           border-bottom:solid 3px; height:400px          i think i cheeted here. how do you spell cheated*/}
+/*#both {padding-left:2%; padding-right:2%; padding-bottom:4%; padding-top:1%; font-size:14px;            border-bottom:solid 3px; height:400px          i think i cheeted here. how do you spell cheated*/}
 
 #left {float:left; width:43%; padding:2.5%; padding-right:50px;}
 
@@ -168,11 +187,11 @@ footer .copy { float:right; text-align:right; padding-right:4.5%; }
 	img.dogg {max-width:100%; }
 	img.catt {max-width:100%; }
 	
-	#both {padding-left:2%; padding-right:2%; padding-bottom:4%; padding-top:1%; height:500px; /*           border-bottom:solid 3px; height:400px          i think i cheeted here. how do you spell cheated*/}
 
-#left {float:left; width:43%; padding:2.5%; padding-right:6%;}
 
-#right {float:left; width:43%; padding:2.5%;}
+#left {width:80%; padding:5%; padding-right:6%;}
+
+#right {width:80%; padding:5%;}
 
 
 
@@ -207,5 +226,9 @@ footer .copy { float:right; text-align:right; padding-right:4.5%; }
 	img.dogg {max-width:100%; }
 	img.catt {max-width:100%; }
 	
-	#both {padding-left:2%; padding-right:2%; padding-bottom:4%; padding-top:1%; height:500px; font-size:12px; /*           border-bottom:solid 3px; height:400px          i think i cheeted here. how do you spell cheated*/}
+	
+#left {width:80%; padding:5%; padding-right:6%;}
+
+#right {width:80%; padding:5%;}
+
 
