--- a/21/style.css
+++ b/21/style.css
@@ -64,10 +64,22 @@ table {
 
 
 /*body {background-color:black; color:white;}*/
+
+
+/*#navbar {max-width:20px; position:relative; top:0px; padding }*/
+
+#burger li ul {display:none; position:absolute; bottom:100px; background-color:white; }
+#burger li:hover ul {display:block; }
+#burger li {font-family:open sans; font-size:.9em; float:left; display:block; position:relative; margin-right:auto; margin-left:auto; padding:20px; }
+
+
+
+
 p {font-family:helvetica; padding-top:20px; line-height:1.4em;}
-h1 {text-align:center; font-size:2em;}
+h1 {font-family:open sans; font-weight:semibold; text-align:center; font-size:2em; padding-top:5%; }
 article {font-family:open sans; width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; padding-bottom:5%; }
-h2 {font-size:4em; padding-top:100px; }
+h2 {font-size:.5em; padding-top:100px; }
+h3 {font-size:5em; padding-top:100px; }
 img {max-width:60%; align:center; display:block; margin-left:auto; margin-right:auto; padding-top:100px; padding-bottom:20px; }
 #one {background-color:#f8d788; }
 #four {background-color:#6b6969; }
@@ -79,14 +91,25 @@ img {max-width:60%; align:center; display:block; margin-left:auto; margin-right:
 
 
 
-@media handheld and (max-width:700px)
+@media handheld and (max-width:600px)
 	{
-	 img {max-width:70%;}
+	 img {max-width:100%;}
 	 
 	 
 
 
 	 
-@media screen and (max-width:700px)
+@media screen and (max-width:600px)
 	{
-	 img {max-width:70%;}
+	 img {max-width:100%;}
+
+
+
+
+@media handheld and (max-width:300px)
+	{
+	 img {max-width:100%;}
+	 
+@media screen and (max-width:300px)
+	{
+	 img {max-width:100%;}
