--- a/parallax/style.css
+++ b/parallax/style.css
@@ -68,48 +68,25 @@ table {
 .parallax-window {
     min-height: 400px;
     background: transparent; }
-.parallax-container1 {background-color:lightblue; 
 
-    min-height: 400px;
-	max-height: 1000px;
-    background: transparent; }
-	
-.parallax-container2 {background-color:lightblue; 
 
-    min-height: 400px;
-    background: transparent; }
 
-	
-.parallax-container3 {background-color:lightblue; 
-
-    min-height: 400px;
-    background: transparent; }
-	
+/*
 .parallax-container {background-color:lightblue; 
 
     min-height: 400px;
-    background: transparent; }
-	
-.parallax-container {background-color:lightblue; 
+    background: transparent; }*/
 
-    min-height: 400px;
-    background: transparent; }
-	
-.parallax-container {background-color:lightblue; 
-
-    min-height: 400px;
-    background: transparent; }
-
-
-
-
+#one {background-color:#f8d788; }
 
 
 
 .container {background-color:grey; }
 
-p {font-family:helvetica; padding-top:20px; line-height:1.4em; padding:10%; }
+h1 {font-family:Open Sans; font-weight:bold; padding-top:20px; line-height:1.4em; padding:10%; }
+p {font-family:Open Sans; padding-top:20px; line-height:1.4em; padding:10%; }
 h2 {text-align:center; font-size:2em;}
 article {font-family:open sans; width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; }
+img {max-width:80%; max-height:80%; margin-right:auto; margin-left:auto; padding-top:30%; padding-left:10%; padding-right:10%; }
 
 
