--- a/parallax/style.css
+++ b/parallax/style.css
@@ -87,6 +87,6 @@ h1 {font-family:Open Sans; font-weight:bold; padding-top:20px; line-height:1.4em
 p {font-family:Open Sans; padding-top:20px; line-height:1.4em; padding:10%; }
 h2 {text-align:center; font-size:2em;}
 article {font-family:open sans; width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; }
-img {max-width:80%; max-height:80%; margin-right:auto; margin-left:auto; padding-top:30%; padding-left:10%; padding-right:10%; }
+img {max-width:600px; max-height:600px; margin-right:auto; margin-left:auto; padding-top:25%; }
 
 
