--- a/parallax/style.css
+++ b/parallax/style.css
@@ -83,10 +83,18 @@ table {
 
 .container {background-color:grey; }
 
+nav {position:fixed; top:0px; left:0px;}
 h1 {font-family:Open Sans; font-weight:bold; padding-top:20px; line-height:1.4em; padding:10%; }
 p {font-family:Open Sans; padding-top:20px; line-height:1.4em; padding:10%; }
 h2 {text-align:center; font-size:2em;}
 article {font-family:open sans; width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; }
-img {max-width:600px; max-height:600px; margin-right:auto; margin-left:auto; padding-top:25%; }
+img {max-width:500px; max-height:500px; margin-right:auto; margin-left:auto; padding-top:25%; padding-left:20%; }
 
 
+
+
+
+
+@media screen and (max-width:300px)
+	img {max-width:300px; max-height:300px; margin-right:auto; margin-left:auto;}
+	h1 {font-family:Open Sans; font-weight:bold; padding-top:20px; line-height:1.4em; padding:5%; }
