--- a/21/style.css
+++ b/21/style.css
@@ -74,10 +74,10 @@ table {
 
 
 
-
+a {text-decoration:none; color:black; }
 p {font-family:helvetica; padding-top:20px; line-height:1.4em;}
 h1 {font-family:open sans; font-weight:semibold; text-align:center; font-size:2em; padding-top:5%; }
-article {font-family:open sans; width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; padding-bottom:5%; }
+article {font-family:open sans; width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; padding-bottom:5%; line-height:1.4em; }
 h2 {font-size:.5em; padding-top:100px; }
 h3 {font-size:5em; padding-top:100px; }
 img {max-width:60%; align:center; display:block; margin-left:auto; margin-right:auto; padding-top:100px; padding-bottom:20px; }
@@ -87,13 +87,25 @@ img {max-width:60%; align:center; display:block; margin-left:auto; margin-right:
 #six {background-color:#91b2d6; }
 #seven {background-color:#9b476b; }
 #eight {background-color:#62c9ef; }
+#nine {background-color:#000034; color:white; line-height:1.5em;}
+#ten {background-color:#CABFB6; }
 
+
+
+
+
+/*I WANT THE OPPOSITE TO HAPPEN HERE!!!
+@media screen and (max-width:1000px)
+	{
+		article {width:50%; }
+		*/
 
 
 
 @media handheld and (max-width:600px)
 	{
 	 img {max-width:100%;}
+	 }
 	 
 	 
 
@@ -102,14 +114,16 @@ img {max-width:60%; align:center; display:block; margin-left:auto; margin-right:
 @media screen and (max-width:600px)
 	{
 	 img {max-width:100%;}
-
+	}
 
 
 
 @media handheld and (max-width:300px)
 	{
 	 img {max-width:100%;}
+	 }
 	 
 @media screen and (max-width:300px)
 	{
 	 img {max-width:100%;}
+	 }
