--- a/parallax/style.css
+++ b/parallax/style.css
@@ -74,7 +74,7 @@ table {
 .parallax-container {background-color:lightblue; 
 
     min-height: 600px;
-    background: transparent; }
+    background: transparent; } /*ITS THIS BITCH RIGHT HERE!!! WHY DO YOU HATE ME BACKGROUND!?!?!?! WHYYYYYYYYYYY*/
 
 #one {background-color:#f8d788; }
 #two {background-color:#f8d788; }
@@ -82,11 +82,32 @@ table {
 
 
 
-.container {background-color:lightgrey; }
+
+
+
+#un {background-color:#f8d788; }
+#deux {background-color:lightgreen; }
+#trois {}
+#quatre {background-color:#6b6969; font-family:Delius Swash Caps; }
+#cinq {background-color:#f9e2a4; }
+#sixx {background-color:#91b2d6; }
+#sept {background-color:#9b476b; color:white; }
+#huit {background-color:#62c9ef; }
+#neuf {background-color:#000034; color:white; }
+#dix {background-color:#CABFB6; }
+
+
+
+
+
+
+
+
+.container {background-color:#f8d788; }
 
 nav {position:fixed; top:0px; left:0px;}
-h1 {font-family:Open Sans; font-weight:bold; padding-top:20px; line-height:1.4em; padding:10%; }
-p {font-family:Open Sans; padding-top:20px; line-height:1.4em; padding:10%; }
+h1 {font-family:Delius Unicase; font-weight:bold; padding-top:20px; line-height:1.4em; padding:10%; }
+p {font-family:Delius; padding-top:20px; line-height:1.4em; padding:10%; }
 h2 {text-align:center; font-size:2em;}
 article {font-family:open sans; width:80%; padding-bottom:10px; padding-left:10%; padding-right:10%; }
 img {max-width:500px; max-height:500px; margin-right:auto; margin-left:auto; padding-top:25%; padding-left:20%; }
@@ -98,4 +119,4 @@ img {max-width:500px; max-height:500px; margin-right:auto; margin-left:auto; pad
 
 @media screen and (max-width:300px)
 	img {max-width:300px; max-height:300px; margin-right:auto; margin-left:auto;}
-	h1 {font-family:Open Sans; font-weight:bold; padding-top:20px; line-height:1.4em; padding:5%; }
+	h1 {font-family:Delius Unicase; font-weight:bold; padding-top:20px; line-height:1.4em; padding:5%; }
