--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -127,6 +127,43 @@ footer .copy { float:right; text-align:right; padding-right:4.5%; }
 
 
 
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 2000px)
+  {
+	nav {margin:0 auto; border-top:solid 3px; border-bottom:solid 3px; padding-bottom:10px; padding-top:10px; }
+	li {display:inline-block; padding-left:10px; padding-right:10px; text-transform:uppercase; font-weight:bold; font-size:1.5em; list-style-type:disc;}
+	img.dogg {max-width:100%; }
+	img.catt {max-width:100%; }
+	
+	#both {padding-left:2%; padding-right:2%; padding-bottom:4%; padding-top:1%; height:500px; /*           border-bottom:solid 3px; height:400px          i think i cheeted here. how do you spell cheated*/}
+
+#left {float:left; width:43%; padding:2.5%; padding-right:6%;}
+
+#right {float:left; width:43%; padding:2.5%;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 900px)
   {
 	nav {margin:0 auto; border-top:solid 3px; border-bottom:solid 3px; padding-bottom:10px; padding-top:10px; }
