--- a/cats-vs-dogs/reset.css
+++ b/cats-vs-dogs/reset.css
@@ -269,3 +269,20 @@ footer .copy { float:right; text-align:right; padding-right:4.5%; }
 #right {width:80%; padding:5%;}
 
 
+
+
+
+
+
+@media screen and (max-width: 480px)
+  {
+	img.logo {max-width:50%;}
+	nav {margin:0 auto; border-top:solid 3px; border-bottom:solid 3px; padding-bottom:10px; padding-top:10px; }
+	li {padding-left:10px; padding-right:80%; text-transform:uppercase; font-weight:bold; font-size:.75em;}
+	img.dogg {max-width:100%; }
+	img.catt {max-width:100%; }
+	
+	
+#left {width:80%; padding:5%; padding-right:6%;}
+
+#right {width:80%; padding:5%;}
