OHH THE TAPESTRY!!!!!

--- a/paralax/style.css
+++ b/paralax/style.css
@@ -124,7 +124,7 @@ p {font-family:Delius; padding-top:20px; line-height:1.4em; padding:0%; }
 #un {}
 #two {background-image: url("images/3.png"); background-attachment: fixed; background-color:#f8d788; background-repeat: no-repeat; }
 #deux {}
-#three {background-image: url("images/3.png"); background-attachment: fixed; background-color:#f8d788; background-repeat: no-repeat; }
+#three {background-image: url("images/3.png"); background-attachment: fixed; background-color:#49a53d; background-repeat: no-repeat; }
 #trois {}
 #four {background-image: url("images/4.png"); background-attachment: fixed; background-color:#6b6969; background-repeat: no-repeat; } 
 #quatre {font-family:Delius Swash Caps; }
