bitches im doneeee

--- a/21secrets/style.css
+++ b/21secrets/style.css
@@ -122,7 +122,7 @@ p {font-family:Delius; padding-top:20px; line-height:1.4em; padding:0%; }
 #top {background-color:#f8d788; background-attachment: fixed; }
 #one {background-image: url("images/1.png"); background-attachment: fixed; background-repeat: no-repeat; background-color:#f8d788; }
 #un {}
-#two {background-image: url("images/3.png"); background-attachment: fixed; background-color:#f8d788; background-repeat: no-repeat; }
+#two {background-image: url("images/2.png"); background-attachment: fixed; background-color:#a2e8ee; background-repeat: no-repeat; }
 #deux {}
 #three {background-image: url("images/3.png"); background-attachment: fixed; background-color:#49a53d; background-repeat: no-repeat; }
 #trois {}
