--- a/21secrets/style.css
+++ b/21secrets/style.css
@@ -86,7 +86,7 @@ html {height: 100%; overflow: hidden;}
 
 body { 
   margin:0; padding:0;
-	perspective: 1px;
+	perspective: 3px;
 	transform-style: preserve-3d;
   height: 100%;
     overflow-y: scroll;
@@ -94,8 +94,10 @@ body {
   font-family: Delius; }
 
 
+/*
 .slide { position: relative; padding: 25vh 10%; width: 100vw; 
 box-sizing: border-box; transform-style: inherit;}
+*/
 
 
 .slide, .slide:before {
@@ -116,10 +118,37 @@ box-sizing: border-box; transform-style: inherit;}
 
 
 /*MINE*/
-h1 {font-family:Delius Unicase; font-weight:bold; padding-top:20px; line-height:1.4em; padding:5%; padding-left:10%; }
+h1 {font-family:Delius Unicase; font-weight:bold; padding-top:20px; line-height:1.4em; padding:5%; padding-left:10%; padding-bottom:5px;}
 p {font-family:Delius; padding-top:20px; line-height:1.4em; padding:0%; }
 
-#top {background-color:#f8d788; background-attachment: fixed; }
+#top {
+background-color: #f8d788;
+background-attachment: fixed;
+}
+
+
+
+
+
+#menu2 li a {display:block; }
+#menu2 li ul {display:none; position:relative; }
+#menu2 img {height: 30px; margin-right:7px; }
+#menu2 li ul li {float:left; }
+
+#menu2 li:hover ul, #menu li.hover ul {
+	display: block;
+	position: absolute;
+	margin: 0;
+	padding: 0; }
+#menu2 li:hover li, #menu li.hover li {top:50px;
+	float: left; }
+#menu2 li:hover li a, #menu li.hover li a {}
+
+
+
+
+
+
 #one {background-image: url("images/1.png"); background-attachment: fixed; background-repeat: no-repeat; background-color:#f8d788; }
 #un {}
 #two {background-image: url("images/2.png"); background-attachment: fixed; background-color:#a2e8ee; background-repeat: no-repeat; }
@@ -140,6 +169,28 @@ p {font-family:Delius; padding-top:20px; line-height:1.4em; padding:0%; }
 #neuf {}
 #ten {background-image: url("images/10.png"); background-attachment: fixed; background-color:#CABFB6; background-repeat: no-repeat; }
 #dix {}
+
+#twelve {background-image: url("images/12.png"); background-attachment: fixed; background-color:#74d3c2; background-repeat: no-repeat; }
+#douze {}
+#thirteen {background-image: url("images/13.png"); background-attachment: fixed; background-color:#88d49c; background-repeat: no-repeat; }
+#treize {}
+#fourteen {background-image: url("images/14.png"); background-attachment: fixed; background-color:#dfccf0; background-repeat: no-repeat; }
+#quatorze {}
+#fifteen {background-image: url("images/12.png"); background-attachment: fixed; background-color:#78d48b; background-repeat: no-repeat; }
+#quinze {}
+#sixteen {background-image: url("images/12.png"); background-attachment: fixed; background-color:#78d48b; background-repeat: no-repeat; }
+#seize {}
+#seventeen {background-image: url("images/12.png"); background-attachment: fixed; background-color:#78d48b; background-repeat: no-repeat; }
+#dixsept {}
+#eighteen {background-image: url("images/18.png"); background-attachment: fixed; background-color:#6a6969; background-repeat: no-repeat; }
+#dixhuit {}
+#nineteen {background-image: url("images/19.png"); background-attachment: fixed; background-color:#4552a5; background-repeat: no-repeat; }
+#dixneuf {}
+#twenty {background-image: url("images/20.png"); background-attachment: fixed; background-color:black; background-repeat: no-repeat; }
+#vingt {}
+#twentyone {background-image: url("images/12.png"); background-attachment: fixed; background-color:#78d48b; background-repeat: no-repeat; }
+#vingtetun {}
+
 /*MINE*/
 
 
