--- a/inkpress/companystyle.css
+++ b/inkpress/companystyle.css
@@ -247,10 +247,6 @@ ul {
   
   
   
-#group2 .title {
-    position: absolute;
-	top:45px;
-	padding-bottom:60px; }
 
 
 h1 {
@@ -294,10 +290,12 @@ h6 {
 
 /*group 2 customers*/
 	
+
 #group2 {
 	clear:both; 
-	padding-top:60px;
-	 }
+	padding-top:80px; 
+	overflow:hidden;
+	padding-bottom:200px; }
 	
 .custimg {
 	width:90%; }
@@ -326,33 +324,44 @@ h6 {
 
 
 
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  /* style the groups
-  --------------------------------------------- */
 
-
-
-/* #group2 .parallax__layer--base {
-    background: white;
-	box-shadow: 0px 10px 5px #F0F0F5; 
-	-webkit-box-shadow: 0px 6px 64px -19px rgba(119,125,118,1);
-	-moz-box-shadow: 0px 6px 64px -19px rgba(119,125,118,1);
-	box-shadow: 0px 6px 64px -19px rgba(119,125,118,1);
-  }
-*/
-
+.footer {
+	clear:both;
+	position:relative;
+	background-color:black; 
+	height:200px; }
+.footer p {
+	font-family:'Open Sans'; 
+	color:white;
+	font-size:.8em;
+	line-height:2em; 
+	padding-top:15px; }
+.adress {
+	float:left;
+	margin-left:5%; 
+	width:50%; }
+.copywrite {
+	float:right; 
+	width:30%; }
+.copy p {
+	position:relative;
+	bottom:5px; 
+	margin-left:auto; 
+	margin-right:auto; 
+	text-align:center; 
+	width: 100%; }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 
   #group3 {
     z-index: 4; /* slide over group 2 and 4 */
