--- a/inkpress/companystyle 2.css
+++ b/inkpress/companystyle 2.css
@@ -75,20 +75,90 @@ table {
 
 */
 
+/* Parallax base styles
+  --------------------------------------------- */
+
+  .parallax {
+    height: 100%; /* fallback for older browsers */
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-perspective: 600px;
+    perspective: 600px;
+    -webkit-perspective-origin-x: 100%;
+    perspective-origin-x: 100%;
+  }
+
+  .parallax__group {
+    position: relative;
+    height: 90%; /* fallback for older browsers */
+    height: 90vh;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+  }
+
+  .parallax__layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-transform-origin-x: 100%;
+    transform-origin-x: 100%;
+  }
+
+  .parallax__layer--fore {
+    -webkit-transform: translateZ(90px) scale(.7);
+    transform: translateZ(90px) scale(.7);
+    z-index: 1;
+  }
+
+  .parallax__layer--base {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    z-index: 4;
+  }
+
+  .parallax__layer--back {
+    -webkit-transform: translateZ(-300px) scale(2);
+    transform: translateZ(-300px) scale(2);
+    z-index: 3;
+  }
+
+  .parallax__layer--deep {
+    -webkit-transform: translateZ(-600px) scale(3);
+    transform: translateZ(-600px) scale(3);
+    z-index: 2;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  /* demo styles
+  --------------------------------------------- */
 
 
 
-
-
-
-
+   /* centre the content in the parallax layers */
 
 
   .navbar {
     position: fixed;
     top:0px; left:0px; right:0px;
 	z-index:999;
-	width:100%;
+    width:100%;
 	background-color:white; 
 	box-shadow: 0px 10px 5px #F0F0F5; 
 	-webkit-box-shadow: 0px 6px 64px -19px rgba(119,125,118,1);
@@ -129,21 +199,127 @@ ul {
 	bottom:-10px;
 	width:0;
 	height:5px;
-	background-color:#B9D32A;
+	background-color:#ceea2f;
 	content:"";
 	transition:width 0.2s
 	/*border-bottom:3px solid #ceea2f;*/ }
 	
 .menulink:hover { 
-	color:#B9D32A; 
+	color:#ceea2f; 
 	/*border-bottom:3px solid #ceea2f;*/ }
 
 .menulink:hover:after { 
 	width:100%;
 	/*border-bottom:3px solid #ceea2f;*/ }
 
+.navbar-trigger {
+	display:none;
+	text-align:center; }
+	
+.navbar-trigger span {
+	display:inline-block;
+    padding: 10px 30px;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+    text-transform: uppercase; }
+	
+.navbar-trigger span:after {
+	display: inline-block;
+	margin-left: 10px;
+	width: 20px;
+	height: 10px;
+	content: "";
+	border-left: solid 10px transparent;
+	border-top: solid 10px orange;
+	border-right: solid 10px transparent; }
+	
+.navbar-trigger span:hover {
+	background-color:blue; }
 
-/* GREEN COLOR #ceea2f */
+.navbar-trigger span.open:after {
+	border-left: solid 10px transparent;
+	border-top: none;
+	border-bottom: solid 10px orange;
+	border-right: solid 10px transparent; }
+
+
+nav.nav-main {
+	background-color: blue;
+	padding: 10px 0; }
+nav.nav-main ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	text-align: center; }
+nav.nav-main li {
+    display: inline-block;
+    border-right: solid 1px lightblue;
+    padding: 0 5px; }
+nav.nav-main li:last-child {
+	border-right: none; }
+nav.nav-main a {
+    display: block;
+    color: white;
+    padding: 10px 30px; }
+nav.nav-main a:hover {
+	background-color: blue;
+	color: orange; }
+
+
+nav.nav-mobile {
+	position: relative;
+	display: none; }
+nav.nav-mobile ul {
+	display: none;
+	list-style-type: none;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	background-color: #ff0032; }
+nav.nav-mobile li {
+    display: block;
+    padding: 5px 0;
+    margin: 0 5px;
+    border-bottom: solid 1px #cc0028; }
+nav.nav-mobile li:last-child {
+	border-bottom: none; }
+nav.nav-mobile a {
+    display: block;
+    color: white;
+    padding: 10px 30px; }
+nav.nav-mobile a:hover {
+	background-color: #e6002d;
+	color:orange; }
+
+
+/* =Media Queries
+-------------------------------------------------------------- */
+@media all and (max-width: 900px) {
+  #nav-trigger {
+    display: block; }
+
+  nav#nav-main {
+    display: none; }
+
+  nav#nav-mobile {
+    display: block; }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 .back {
 	background-color:#F8FBF8; 
@@ -151,114 +327,6 @@ ul {
 	background: -o-linear-gradient(#F8FBF8, white); /* For Opera 11.1 to 12.0 */
 	background: -moz-linear-gradient(#F8FBF8, white); /* For Firefox 3.6 to 15 */
 	background: linear-gradient(#F8FBF8, white); /* Standard syntax */}
-
-
-
-
-
-/*================================================================*\
-\*=================THE  MOBILE ONE!===============================*/
-#mobilemenu {
-	display:none; }
-
-#mobilemenu img {
-	height:55px; }
-
-#topbar {
-	background:white;
-	padding: 10px 0 10px 0;
-	text-align:center;
-	height:60px;
-	overflow:hidden;
-	font-family:'Open Sans';
-	-webkit-transition: height 0.5s linear;
-	-moz-transition: height 0.5s linear;
-	transition: height 0.5s linear;
-	box-shadow: 0px 10px 5px #F0F0F5; 
-	-webkit-box-shadow: 0px 6px 64px -19px rgba(119,125,118,1);
-	-moz-box-shadow: 0px 6px 64px -19px rgba(119,125,118,1);
-	box-shadow: 0px 6px 64px -19px rgba(119,125,118,1); } }
-	
-#topbar a {
-	font-size:1em;
-	line-height:2em;
-	font-weight:400;
-	text-decoration:none;
-	font-weight:bold; }
-
-#topbar a:hover {
-	 }
-	 
-#topbar h1 {
-	border:1px solid black; 
-	font-size:1em;
-	color:black;
-	font-weight:300;
-	border-radius:10%; 
-	padding:10px;
-	padding-top:4px;
-	padding-bottom:7px;
-	margin:0; 
-	width:50px;
-	height:20px;
-	float:right;
-	position:relative;
-	right:35%;
-	top:10px; }
-
-#topbar h1:hover {
-	border-color:#B9D32A;
-	color:#B9D32A; }
-
-#topbar img {
-	position:relative;
-	float:left;
-	left:35%;
-	top:0px; }
-
-#tophiddenbar {
-	clear:both;
-	display:block;
-	width:100%;
-	background:white;
-	padding:8px 0;
-	font-size:1.5em;
-	text-align:center; }
-
-#tophiddenbar a {
-	font-size:.6em;
-	margin-left:auto;
-	margin-right:auto;
-	text-decoration:none;
-	width:20%;
-	font-family:'Open Sans';
-	line-height:1em;
-	color:black;
-	padding-top:30px;
-	padding-bottom:10px;
-	float:left;
-	text-align:center; }
-
-#tophiddenbar a:hover {
-	color:#B9D32A;
-	font-weight:bold; }
-
-#topbar:hover {
-	height:130px;}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -405,9 +473,6 @@ h6 {
 
   
 
-@media handheld, screen and (max-width:840px) {
-	.navbar {
-		display:none; }
-	#mobilemenu {
-		display:block; }
-		  }
+@media handheld, screen and (max-width:840px)	
+
+	
