--- a/inkpress/companystyle.css
+++ b/inkpress/companystyle.css
@@ -410,4 +410,17 @@ h6 {
 		display:none; }
 	#mobilemenu {
 		display:block; }
-		  }
+	.about-photos {
+		clear:both;
+		width:75%; }
+	.about-info { 
+		clear:both; 
+		width: 75%; 
+		padding-top:40px; 
+		padding-right:10%;
+		padding-left:0; }
+	#group1 .innards { 
+		top:50px;
+		padding-top:50px;
+		padding-bottom:20%; }
+		    }
