i heard my momma cryyyyy the night chicago frieddd

--- a/inkpress/style.css
+++ b/inkpress/style.css
@@ -92,8 +92,8 @@ p {
 p { font-size:1.5em; }
 
 .languages img {
-	max-height:80px;
-	padding:25px;
+	max-width:40%;
+	padding-left:10%;
 	margin-left:auto;
 	margin-right:auto; }
 }
