--- a/inkpress/style.css
+++ b/inkpress/style.css
@@ -99,7 +99,7 @@ p { font-size:1.5em; }
 }
 
 
-@media handheld, screen and (max-width:480px) and (orientation: landscape) {
+@media handheld, screen and (max-device-width:600px) and (orientation: landscape) {
 
 .logolarge img { width:40%; 
 	float:left; }
